Added the demo page

--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,9 @@
       <section data-delighter class="splash">
          <h1 data-delighter class="right">Delighters.JS</h1>
          <h2 data-delighter class="left">Add CSS animations to delight users as they scroll down.</h2>
-         <p data-delighter class="bottom">
-            By <a target="_blank" href="https://q42.com">Q42</a>
+         <p data-delighter="start:1" class="bottom">
+            A tiny javascript library by <a target="_blank" href="https://q42.com">Q42</a><br>
+            <a target="_blank" href="https://github.com/Q42/delighters"><code>https://github.com/Q42/delighters</code></a>
          </p>
       </section>
       <section data-delighter="start:0.3">
@@ -82,7 +83,7 @@
          </ul>
       </section>
       <section>
-         <h2 class="left">Debugging</h2>
+         <h2>Debugging</h2>
          <ul data-delighter="debug">
             <li>Set the <code>data-delighter="debug"</code> flag to enable debugging for that delighter</li>
             <li>This will give the delighter a red outline</li>
